           * fixed processing of coastlines for gnomonic projection.
           * don't try to use PyNIO in NetCDFFile (it was causing
             too many suprises).
           * improved documentation using Sphinx/docutils.
           * change default behaviour of num2date and date2num to be
             the same as matplotlib counterparts.
version 0.99 (svn revision 5344)
           * fix to warpimage method for API change in matplotlib 0.98.0.
           * updated pyproj to 1.8.6.
           * fixed bug in NetCDFFile creating masked arrays when both
             _FillValue and missing_value exist.
           * drawparallels and drawmeridians return a dictionary containing
             the Line2D and Text instances associated with each lat or lon.
           * drawcoastlines, drawcountries and friends now have
             PatchCollection return values.
           * make sure '_nolabel_' set on coastlines, countries, states,
             rivers, parallels and meridians so they are not included in 
             a legend.
           * added drawmapscale method to create a map scale bar similar
             to that available with the GMT's psbasemap.
           * Now lives in mpl_toolkits.basemap.  Instead
             of 'from matplotlib.toolkits.basemap import Basemap',
             use 'from mpl_toolkits.basemap import Basemap'.
             All examples changed.  Uses matplotlib mpl_toolkits
             namespace package, so basemap can now be installed
             if matplotlib is installed as an egg. Python 2.3
             support re-enabled.
           * changed _geos to _geoslib, so as not to conflict with
             the python module bundled with the GEOS library.
           * some fixes/enhancements for omerc projection (added 'no_rot'
             flag).
           * added warpimage method for displaying an image background.
             Default is NASA's blue marble image, which is included.
version 0.9.9.1 (svn revision 4808)